feat: create function and validation to avoid json
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>